2010-09-25  Gary V. Vaughan  <gary@gnu.org>

	maint: DRYing out `Makefile.am' file paths.
	* Makefile.am (aux_dir, macro_dir): Include `$(srcdir)' in
	declaration. Adjust all references.
	(doc_dir, ltdl_dir, m4sh_dir, tests_dir): New single location
	to hold directory paths, all including `$(srcdir)', to reduce
	typing.
	(LT_M4SH): Use `$m4sh_dir' as include directory.
	(defs): This one is for a file in the build-tree, so no
	leading `$(srcdir)'.

	CLEANUP: fix error from pushing too far up the branch.
	* Makefile.am (install-data-local): Undo character transposition
	from too early push of untested v2.4-17-gaf74d58.

2010-09-23  Gary V. Vaughan  <gary@gnu.org>

	maint: use macro_dir consistently in all files.
	* Makefile.am: Replace all uses of m4dir with macrodir to
	match AC_CONFIG_MACRO_DIR.
	* libltdl/config/libtoolize.m4sh: Replace all uses of macrodir
	with macro_dir.
	* tests/defs.m4sh, tests/sh.test: Likewise.

	maint: use aux_dir consistently in all files.
	* Makefile.am, Makefile.maint: Replace all uses of auxdir
	with aux_dir to match AC_CONFIG_AUX_DIR.
	* libltdl/config/libtoolize.m4sh: Likewise.
	* tests/defs.m4sh, tests/getopt-m4sh.at: Likewise.

2010-09-24  Gary V. Vaughan  <gary@gnu.org>

	Makefile: try to be robust against shell meta-chars in filenames.
	* Makefile.am: In each rule body, unless a make variable needs
	to be seen as multiple words by the shell (for word-splitting
	loops, or because it contains several commands), quote it. Use
	single quotes unless the shell needs to perform variable inter-
	polation, in which case use double quotes.

	maint: let make employ user's `SED' setting.
	* Makefile.am: Replace hard-coded `sed' with `$(SED)' through-
	out.

2010-08-30  Gary V. Vaughan  <gary@gnu.org>

	maint: simplify and improve safety of bootstrap process.
	* Makefile.am (bootstrap_files): List files that need to be
	generated at bootstrap time before `./configure && make' can